# chat_bot

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
app/: chat_bot.py  main.py
app/core/: config.py  handler_errors.py  logger.py
app/database/: database_config.py  models.py  registry.py
app/llm/: constants.py  decorators.py  exceptions.py  google_gemini.py
app/providers/: chat_provider.py  decorators.py  exceptions.py
app/routers/: chat.py
app/schema/: api_chat.py  chat_schema.py
app/services/: base.py  chat_services.py  constants.py  decorators.py  exceptions.py  services.py  services_handler.py
docker/mysql/: Dockerfile  init.sql  reset.sql  run-init.sh  run-reset.sh
